# cassettify

./: .gitignore  README.md  pyproject.toml
Formula/: cassettify.rb
cassettify/: auth.py  cache.py  cli.py  config.py  cookies.py  downloader.py  library.py  session.py  spotify.py
cassettify/ui/: app.py  picker.py  progress.py  wizard.py
docs/callback/: index.html
docs/superpowers/plans/: 2026-05-30-cassettify.md
docs/superpowers/specs/: 2026-05-30-cassettify-design.md
tests/: test_cache.py  test_config.py  test_spotify.py
