[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cassettify"
version = "0.1.0"
description = "Download your Spotify playlists for your iPod Classic"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "spotipy>=2.23.0",
    "spotdl>=4.2.0",
    "textual>=0.47.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "requests>=2.31.0",
]

[project.scripts]
cassettify = "cassettify.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["cassettify"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
